[gd_scene load_steps=14 format=3 uid="uid://bjsiwkhffp8h1"]

[ext_resource type="Texture2D" uid="uid://b26nsi8jg55ln" path="res://Interactables/Bomb/assets/bomb.png" id="1_4b8ht"]
[ext_resource type="Script" uid="uid://de4gh2qlmw8ep" path="res://Props/ExplosiveBarrel/explosive_barrel.gd" id="1_lhmhj"]
[ext_resource type="Texture2D" uid="uid://cdjkakw3sn5lq" path="res://Props/Sprites/TX Props with Shadow.png" id="1_p3dk2"]
[ext_resource type="AudioStream" uid="uid://cucxjnbp7yhp5" path="res://Levels/Dungeon01/dark_wizard/Audio/boss_fireball_hit.wav" id="2_r8y7d"]
[ext_resource type="Script" uid="uid://cnpste1dhl3gp" path="res://GeneralNodes/HurtBoxes/hurt_box.gd" id="3_6kikp"]
[ext_resource type="PackedScene" uid="uid://28uab30ot80m" path="res://GeneralNodes/HitBoxes/hit_box.tscn" id="6_p3dk2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jwi5"]
size = Vector2(20, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffuaa"]
atlas = ExtResource("1_p3dk2")
region = Rect2(160, 392, 40, 40)

[sub_resource type="Animation" id="Animation_pqe8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BarrelSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BarrelSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BarrelSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BlastArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ExplosionSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_3scff"]
resource_name = "explode"
length = 1.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BarrelSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BlastArea:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_r8y7d")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ExplosionSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2ikk"]
_data = {
&"RESET": SubResource("Animation_pqe8h"),
&"explode": SubResource("Animation_3scff")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5wb2x"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4n1ud"]

[node name="ExplosiveBarrel" type="StaticBody2D"]
script = ExtResource("1_lhmhj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_7jwi5")

[node name="BarrelSprite" type="Sprite2D" parent="."]
position = Vector2(4, -7)
texture = SubResource("AtlasTexture_ffuaa")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_4b8ht")
hframes = 3
vframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_q2ikk")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="BlastArea" type="Area2D" parent="."]
collision_mask = 258
monitoring = false
monitorable = false
script = ExtResource("3_6kikp")
damage = 2
metadata/_custom_type_script = "uid://cnpste1dhl3gp"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastArea"]
shape = SubResource("CircleShape2D_5wb2x")
debug_color = Color(0.7, 0, 0.052, 0.014)

[node name="Hitbox" parent="." instance=ExtResource("6_p3dk2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_4n1ud")
debug_color = Color(0.70196074, 0.5727327, 0, 0.41960785)
